fixed the alignment of the titles

--- a/gsusa/content/src/main/theme/custom/scss/components/_article-carousel.scss
+++ b/gsusa/content/src/main/theme/custom/scss/components/_article-carousel.scss
@@ -57,6 +57,7 @@
       h3 {
         font-size: rem-calc(13);
         margin: 0 0 5px 0;
+        line-height: 1.2;
       }
     }
     &.last {
