--- a/gsusa/content/src/main/theme/custom/scss/components/_article-tile.scss
+++ b/gsusa/content/src/main/theme/custom/scss/components/_article-tile.scss
@@ -12,12 +12,12 @@ $lines-to-show: 3;
       z-index: 15;
       bottom: 0;
       display: block;
-      padding: rem-calc(10 20 0);
+      padding: rem-calc(0 20 0);
       color: #fff;
       position: absolute;
       width: 100%;
       transition: height 500ms;
-      height: rem-calc(55);
+      height: rem-calc(100);
       overflow: hidden;
       * {
         color: $white;
@@ -25,15 +25,22 @@ $lines-to-show: 3;
       h3 {
         font-size: rem-calc(21);
         line-height: rem-calc(24);
+        margin-bottom: rem-calc(8);
+        margin-top: 0;
         //white-space: nowrap;
-        text-overflow: ellipsis;
-        width: 90%;
-        overflow: hidden;
-        margin-bottom: 1rem;
-		white-space: nowrap;
+        // text-overflow: ellipsis;
+        // width: 90%;
+        // overflow: hidden;
+		    // white-space: nowrap;
       }
       p {
         font-size: rem-calc(14);
+        transition: opacity 1s linear;
+         -moz-transition: opacity 1s linear;
+         -webkit-transition: opacity 1s linear;
+        margin: 0;
+        line-height: $line-height;
+        opacity: 0;
         // -webkit-line-clamp: $lines-to-show;
         // -webkit-box-orient: vertical;
         // -moz-line-clamp: $lines-to-show;
@@ -41,11 +48,9 @@ $lines-to-show: 3;
         // display: block;
         // display: -moz-box;
         // display: -webkit-box;
-        text-overflow: ellipsis;
-        overflow:hidden;
-        margin: 0;
         // max-width: 99%;
-        line-height: $line-height;
+        // text-overflow: ellipsis;
+        // overflow:hidden;
         // height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
       }
       .article-detail-carousel .article-slider & {
@@ -70,18 +75,24 @@ $lines-to-show: 3;
 	      &:hover {
 	        .text-content {
 	          height: 100%;
-								  h3{
-					  text-overflow: clip;
-					  white-space: normal;
-				  }
+						h3{
+  					  text-overflow: clip;
+  					  white-space: normal;
+				    }
+            p {
+              opacity: 1;
+              transition: opacity .5s linear;
+              -moz-transition: opacity .5s linear;
+              -webkit-transition: opacity .5s linear;
+            }
 	        }
 	        .article-detail-carousel .article-slider  & {
 	          .text-content {
 	            height: 100%;
-				  h3{
-					  text-overflow: clip;
-					  white-space: normal;
-				  }
+  				  h3 {
+    					  text-overflow: clip;
+    					  white-space: normal;
+  				    }
 	          }
 	        }
 	    }
@@ -128,6 +139,9 @@ $lines-to-show: 3;
           padding-bottom: rem-calc(17);
         }
       }
+    }
+    section .text-content h3 {
+      font-size: 100%;
     }
   }
 }
@@ -250,15 +264,18 @@ $lines-to-show: 3;
   	  	  -webkit-transition-duration:500ms;
   	  	}
   	  }
-  	  .article-tile{
-		section{
-		  a{
-		    &:hover{
-		     .text-content {
-		        height: 2.5rem;
-			  }
-	        }
-		  }
+  	.article-tile{
+  		section {
+  		  a {
+  		    &:hover{
+  		      .text-content {
+  		        height: 2.5rem;
+            }
+            p {
+              display: none;
+            }
+          }
+  		  }
 	    }
 	  }
 	}
@@ -266,4 +283,4 @@ $lines-to-show: 3;
 }
   .clearboth{
     clear:both;
-  } 
+  }
